Criado fluxo onde exige uma company para adicionar um stock, e craido uma tela visual apenas para acompanhamento